--- a/.github/workflows/run_analysis.yml
+++ b/.github/workflows/run_analysis.yml
@@ -3,9 +3,9 @@ name: Run Snowflake Analysis
 on:
   push:
     branches:
-      - main  # ou ta branche principale
+      - main 
   schedule:
-    - cron: '0 8 * * *'  # Exécution tous les jours à 8h UTC (optionnel)
+    - cron: '0 8 * * *'  # Exécution tous les jours à 8h UTC 
 
 jobs:
   analyze:
@@ -28,4 +28,5 @@ jobs:
     - name: Run analysis script
       env:
         SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }}
+      working-directory: ./FakeSchoolData
       run: python analyze_results.py
