--- a/.github/workflows/run_analysis.yml
+++ b/.github/workflows/run_analysis.yml
@@ -52,8 +52,9 @@ jobs:
     - name: Compile and run dbt models
       run: |
         cd fakeschool_dbt
+        dbt clean
         dbt compile --profiles-dir ~/.dbt
-        dbt run --profiles-dir ~/.dbt
+        dbt run --profiles-dir ~/.dbt  --full-refresh
 
     - name: Run gold queries & generate charts
       env:
